# RushHour

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
code/classes/: board.py  car.py  state.py
src/algorithmes/: __init__.py  bfs.py
src/classes/: __init__.py  board.py  car.py  state.py
src/util/: loader.py
tests/: test_state.py
