[tool.poetry]
name = "rushhour"
version = "0.1.0"
description = ""
authors = ["Marijn Doeve <marijn@doeve.me>"]

[tool.poetry.dependencies]
python = "^3.10"
xtermcolor = "^1.3"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
files = "main.py"
